# infrahub-demo-dc-fabric

./: .gitattributes  .gitignore  .gitpod.yml  .infrahub.yml  .markdownlint.yaml  .markdownlintignore  .yamllint.yml  CLAUDE.md  LICENSE.txt  README.md  ansible-requirements.yml  ansible.cfg  ceos.tar  config.yml  docker-compose.yml  naf-demo.excalidraw  prebuild.sh  pyproject.toml  start.sh  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  onCreateCommand.sh  postCreateCommand.sh  postStartCommand.sh
.github/: CODEOWNERS  dependabot.yml  file-filters.yml  labeler.yml
.github/workflows/: ci.yml  sync-docs.yml  update-infrahub-sdk.yml  update-infrahub.yml
.vale/styles/: spelling-exceptions.txt
.vale/styles/Infrahub/: branded-terms-case-swap.yml  sentence-case.yml
bootstrap/: create_basic.py  create_location.py  create_security_nodes.py  create_topology.py  generate_topology.py  utils.py
checks/: check_backbone_link_redundancy.gql  check_backbone_link_redundancy.py  check_device_topology  check_device_topology.gql  check_device_topology.py
configs/clab/: clab_topology.yml
configs/startup/: atl-leaf1.cfg  ceos1.cfg  ceos2.cfg
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/code_snippets/: 0002_shell_run_generator.sh
docs/docs/: concepts.mdx  developer-guide.mdx  install.mdx  readme.mdx  step_by_step.mdx  user-walkthrough.mdx
docs/docs/code_snippets/: 0002_shell_run_generator.sh
docs/docs/demo-dc-fabric/: readme.mdx
docs/docs/demo-dc-fabrics/: readme.mdx
docs/docs/demo-dc-fabrics/code_snippets/: 0001_graphql_add_repo.gql
docs/src/pages/: index.tsx
generated-configs/clab/: clab_topology.yml  fra05-pod1.yml
generated-configs/clab/configs/startup/: fra05-pod1-leaf1.cfg  (+3 more)
generated-configs/isis/: atl-leaf1.cfg  atl-leaf2.cfg  atl-leaf3.cfg  atl-leaf4.cfg  atl-spine1.cfg  atl-spine2.cfg
generated-configs/startup/: atl-leaf1.cfg  atl-leaf2.cfg  atl-leaf3.cfg  atl-leaf4.cfg  atl-spine1.cfg  atl-spine2.cfg
generators/: create_basic.py  create_location.py  create_security_nodes.py  create_topology.py  generate_network-services.py  generate_topology.py  network_services.gql  network_services.py  network_topology.gql  network_topology.py  render_security_policy.py  sample.json  utils.py
menus/: menu.yml
models/: basic.py  circuit.yml  create_basic.py  create_location.py  create_topology.py  dcim.yml  generate_devices_from_topology.py  infrastructure.yml  infrastructure_base.py  infrastructure_base.yml  infrastructure_devices.py  infrastructure_devices_2.py  infrastructure_edge.py  infrastructure_topology.py  infrastructure_topology.yml  ipam.yml  locations.yml  organizations.yml  routing.yml  security.yml  topology.yml  utils.py
playbooks/: artifact-configs.yml  avd-checks.yml  avd-config.yml  checks.yml  inventory.yml  query.yml  startup-configs.yml
playbooks/group_vars/: all.yaml
pytest_infrahub/: README.md  pyproject.toml
pytest_infrahub/pytest_infrahub/: exceptions.py  items.py  loader.py  models.py  plugin.py  utils.py
schemas/: circuit.yml  dcim.yml  ipam.yml  locations.yml  organizations.yml  routing.yml  security.yml  topology.yml
scripts/: create_demo_data.sh  create_sample_topology.sh  get_configs.py
templates/: clab_topology.j2  device_arista_config.tpl.j2  device_cisco_config.tpl.j2  device_info.gql  device_startup_arista_config.tpl.j2  device_startup_cisco_config.tpl.j2  device_startup_config.j2  device_startup_config_isis.j2  device_startup_info.gql  device_startup_query.gql  interface_csv.j2  interface_xml.j2  juniper_srx_config.gql  juniper_srx_config.j2  startup_config.j2  topology_info_query.gql
testing/: test_example.py
tests/: test_check.yml  test_graphql.yml  test_j2_transform.yml  test_python_transform.yml  test_shell_scripts.py
tests/clab_topology/baseline/: input.json
tests/clab_topology/missing_mgmt_ip/: input.json
tests/device_arista/baseline/: input.json
tests/device_arista/missing_interfaces/: input.json  output.txt
tests/integration/: conftest.py  test_sanity_check.py  test_workflow.py
tests/oc_interfaces/baseline/: input.json  output.json
tests/python_transforms/: test_transforms.yml
tests/rfiles/: test_rfiles.yml
tests/unit/rfile/: test_rfiles.yml
topology/: 2ceos.clab.yml  clab_topology.j2  demo.clab.yml  topology_info.gql
transforms/: __init__.py  avd_bgp.gql  avd_bgp.py  avd_config.gql  avd_config.py  avdbgp.py  computed_link_description.gql  computed_link_description.py  oc_interfaces.gql  openconfig.py
(+6 files in other folders)
