[tool.poetry]
name = "infrahub-demo-dc-fabric"
version = "0.1.1"
description = ""
authors = ["OpsMill <info@opsmill.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, < 3.13"
infrahub-sdk = {version = "1.14.0", extras = ["all"]}
invoke = "^2.1.2"
ansible-core = [
    { version = ">=2.15.9", python = ">=3.9,<3.10" },
    { version = ">=2.17.8", python = ">=3.10" },
]
netaddr = "^1.3.0"
paramiko = "^4.0.0"
deepmerge = "^2.0"
cvprac = "^1.4.1"
md-toc = "^9.0.0"
treelib = "^1.8.0"
jsonschema = "4.25.1"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.37.1"
ruff = "^0.14.2"
mypy = "^1.18.1"
pytest = "^8.4.2"
infrahub-testcontainers = "1.6.0b0"
pytest-asyncio = "^1.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten",
    "ignore:Deprecated call to",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
