[project]
name = "infrahub-demo-dc-fabric"
version = "0.2.0"
description = ""
authors = [{name = "OpsMill", email = "info@opsmill.com"}]
requires-python = ">=3.10,<3.13"

dependencies = [
    "infrahub-sdk[all]==1.17.0",
    "invoke>=2.2.1",
    "ansible-core>=2.17.9",
    "netaddr>=1.3.0",
    "paramiko>=4.0.0",
    "deepmerge>=2.0",
    "cvprac>=1.4.2",
    "md-toc>=9.0.0",
    "treelib>=1.8.0",
    "jsonschema==4.25.1",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "yamllint>=1.37.1",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "infrahub-testcontainers==1.6.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten",
    "ignore:Deprecated call to",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
