[project]
name = "infrahub-demo-dc-fabric"
version = "0.2.0"
description = "Infrahub demo repository showcasing data center fabric management with VxLAN/EVPN and firewalls"
authors = [{name = "OpsMill", email = "info@opsmill.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "infrahub-sdk[all]>=1.17.0,<2.0.0",
    "invoke>=2.2.1,<3.0.0",
    "ansible-core>=2.17.9",
    "netaddr>=1.3.0",
    "paramiko>=4.0.0",
    "deepmerge>=2.0",
    "cvprac>=1.4.2",
    "md-toc>=9.0.0",
    "treelib>=1.8.0",
    "jsonschema>=4.25.1,<5.0.0",
]

[dependency-groups]
dev = [
    "yamllint>=1.37.1",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "infrahub-testcontainers>=1.6.2,<2.0.0",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
]

[tool.ruff]
line-length = 120
exclude = [".venv/", ".dev/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
exclude = [
    "^bootstrap/",
    "^tests/",
    "^scripts/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten",
    "ignore:Deprecated call to",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
